# Binarite-CLI-v2

./: Cargo.toml  CommandLineHelp.md  README.md  build.rs
.github/workflows/: build_rust.yml
cred-store/: Cargo.toml
cred-store/src/: file-store.rs  lib.rs  traits.rs
openapi/: README.md
openapi/docs/: CreateMetasphereRequest.md  CreateMetasphereResponse.md  CreateUserRequest.md  CreateUserResponse.md  InstanceSize.md  MetasphereDb.md  MetasphereStatus.md  MetasphereStatusResponse.md  ProjectsApi.md  Roles.md  TeamManagementResponse.md  TeamsApi.md  TenantInfo.md  TenantsApi.md  UpdateProjectRequest.md  UpdateTeamRequest.md  UpdateUserRequest.md  UsersApi.md
openapi/src/apis/: mod.rs  teams_api.rs  users_api.rs
openapi/src/models/: create_user_request.rs  create_user_response.rs  metasphere_db.rs  metasphere_outputs.rs  metasphere_status_response.rs  project_info.rs  roles.rs  team_info.rs  tenant_management_response.rs  user_info.rs
rust/: Cargo.toml
rust/.openapi-generator/: FILES
rust/docs/: CreateProjectRequest.md  CreateTeamRequest.md  DeleteUserResponse.md  MetasphereOutputs.md  MetaspheresApi.md  ProjectInfo.md  ProjectManagementResponse.md  ResponseStatus.md  TeamInfo.md  TenantManagementResponse.md  UpdateUserResponse.md  UserInfo.md
rust/src/apis/: configuration.rs  metaspheres_api.rs  projects_api.rs  tenants_api.rs
src/: config.rs  lib.rs  main.rs
src/auth/: get_token.rs  login.rs  mod.rs  token_response.rs
src/commands/: command-executor.rs  context.rs  login.rs  logout.rs  mod.rs  refresh.rs  sphere.rs  temp.rs
(+16 files in other folders)
