[package]
name = "binarite-cli"
default-run = "binarite-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "openapi" }
cred-store = { path = "./cred-store" }
tokio = { version = "1.38.0", features = ["full"] }

clap = { version = "4.5.7", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.117"
serde = "1.0.203"
base64 = "0.22.1"
spinners = "4.1.1"
open = "5.1.4"
oauth2 = "4.4.2"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
chrono = "0.4.38"
dotenvy_macro = "0.15.7"
clap-markdown = "0.1.4"

[build-dependencies]
dotenvy = "0.15.7"
